syntax = "proto2";
package redditproto;

// UserAgent describes a non-user entity controlling a reddit account. This
// information is required to request authorization from a reddit user, and
// refresh it.
message UserAgent {
  required string user_agent = 1;
  required string client_id = 2;
  required string client_secret = 3;
  optional string refresh_token = 4;
}
